# Eucalypt-Userland

./: Cargo.toml  GNUmakefile  LICENSE  README.md  USER  compile_commands.json  link.ld  linker.ld
.cargo/: config.toml
libs/: CMakeLists.txt  GNUmakefile
libs/compositor/: CMakeLists.txt
libs/compositor/include/: compositor.h
libs/compositor/src/: compositor.c  font_renderer.c
libs/crt/: crt.asm
libs/cursor/: CMakeLists.txt
libs/cursor/src/: cursor.c
libs/display/: CMakeLists.txt
libs/display/include/: display.h
libs/display/src/: display.c
libs/libc/: CMakeLists.txt  stdio.c  stdlib.c  string.c
libs/libc/include/: event.h  stdatomic.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  syscalls.h  vfs.h
libs/libc/src/: stdio.c  stdlib.c
libs/term/: CMakeLists.txt
libs/term/include/: term.h
libs/term/src/: term.c
libs/wm/: CMakeLists.txt
libs/wm/include/: window.h
libs/wm/src/: window.c
src/: cursor.c  display.c  graphics.rs  lib.rs  main.c  main.rs  ui.rs  window.c
src/include/: cursor.h  display.h  window.h
